The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2004-09-27 DP  1.2B3 Dynamically link libpq/OpenSSL for sensible installation with Win32 PostgreSQL
    <li>2004-09-18 DP  1.2B2 Prevent dropped servers reappearing after View System Objects change.
    <li>2004-09-17 AP  1.2B2 GRANT for functions in reengineered SQL window
    <li>2004-09-17 AP  1.2B2 Fix Database creation for 7.3/7.4 [Jona]
    <li>2004-09-16 AP  1.2B2 resources: use wxID_xxx IDs to enable GTK wxStockButtons
    <li>2004-09-16 AP  1.2B2 resources: use 12d height for comboboxes (GTK positioning issue)
    <li>2004-09-16 AP  1.2B2 rewrite of properties actions
    <li>2004-09-16 DP  1.2B2 mask passwords on dlgServer [Ivan Nejgebauer]
    <li>2004-09-15 DP  1.2B2 fix function return type quoting
    <li>2004-09-10 AP  1.2B2 fix GrantWizard for sequence and view
    <li>2004-09-10 AP  1.2B2 fix type quoting
    <li>2004-09-08 AP  1.2B2 fix OnAdd server property positioning
    <li>2004-09-05 AP  1.2.0 performance speedup retrieving server features
    <li>2004-09-05 AP  1.2.0 qtIdent checks keywords
    <li>2004-08-29 AP  1.2.0 Sequence schema fix
    <li>2004-08-25 DAP 1.2.0 Prevent crash when non-superuser views database properties.
    <li>2004-08-18 AP  1.2.0 set PGPASSWORD environment for backup/restore
    <li>2004-08-18 AP  1.2.0 fix ACL for quoted user/group names
    <li>2004-08-15 AP  1.2.0 buglet cleanups
    <li>2004-08-11 AP  1.2.0 restore wizard
    <li>2004-08-11 AP  1.2.0 rework of ctlComboBox
    <li>2004-08-09 AP  1.2.0 server property
    <li>2004-08-05 AP  1.2.0 win32 service control