@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-10-05 DP  1.2B3 Drop rows correctly when selected in reverse in the edit grid. Also, confirm drop first.
     <li>2004-09-27 DP  1.2B3 Dynamically link libpq/OpenSSL for sensible installation with Win32 PostgreSQL
     <li>2004-09-18 DP  1.2B2 Prevent dropped servers reappearing after View System Objects change.
     <li>2004-09-17 AP  1.2B2 GRANT for functions in reengineered SQL window
